Craig: Added bootstrap and did some basic styles.

--- a/app/views/phones/_phone.slim
+++ b/app/views/phones/_phone.slim
@@ -1,5 +1,6 @@
-= phone.id
-= phone.make
-= phone.has_gps
-= phone.has_internet
-= button_to "Delete Phone", { :action => "destroy", :id => phone.id }, :confirm => "Are you sure?", :method => :delete
+.well class="phone"
+	= phone.id
+	= phone.make
+	= phone.has_gps
+	= phone.has_internet
+	= button_to "Delete Phone", { :action => "destroy", :id => phone.id }, :confirm => "Are you sure?", :method => :delete, :class => "btn primary"
