--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,29 @@
 <html>
 <head>
   <title>Numb</title>
+  <%= stylesheet_link_tag    "bootstrap", :media => "all" %>  
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="navbar">
+  	<div class="navbar-inner">
+    	<div class="container">
+    		 <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+	      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 
-<%= yield %>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </a>
+	 
+	      <!-- Be sure to leave the brand out there if you want it shown -->
+	      <a class="brand" href="#">Numb </a> <span style="vertical-align:middle">Managing phones and numbers</span>
+    	</div>
+    </div>
+</div>
+	<%= yield %>
 
 </body>
 </html>
