--- a/app/views/phone_numbers/_phone_number.slim
+++ b/app/views/phone_numbers/_phone_number.slim
@@ -1,3 +1,12 @@
-= phone_number.id
-= phone_number.number
-= button_to "Delete Phone Number", { :action => "destroy", :id => phone_number.id }, :confirm => "Are you sure?", :method => :delete
+.viewArea
+	.well 
+		h2
+			= phone_number.number
+		- if phone_number.is_assigned
+			h3
+				.red Assigned
+		- else
+			h3 
+				.green Avaliable
+		= button_to "Edit Number", { :action => "edit", :id => phone_number.id }, :method => :get, :class => "btn"
+		= button_to "Delete Number", { :action => "destroy", :id => phone_number.id }, :confirm => "Are you sure?", :method => :delete, :class => "btn btn-danger"
