--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body style="padding: 10px 10px 10px 10px">
 <div class="navbar">
   	<div class="navbar-inner">
     	<div class="container">
@@ -16,12 +16,35 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
+
 	      </a>
-	 
 	      <!-- Be sure to leave the brand out there if you want it shown -->
-	      <a class="brand" href="/">Numb </a> <span style="vertical-align:middle">Managing phones and numbers</span>
-    	</div>
-    </div>
+	      <a class="brand" href="/">Numb</a> 
+        
+        <!-- Everything you want hidden at 940px or less, place within here -->
+        <div class="nav-collapse">
+          <ul class="nav">
+            <li class="active">
+              <a href="/  ">Home</a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Phone Numbers <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/phone_numbers">View All Numbers</a></li>
+                <li><a href="/phone_numbers/new">New Number</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Phones <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/phones">View Phones</a></li>
+                <li><a href="/phones/new">New Phone</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+  </div>
 </div>
   <% if notice %>
     <p class="notice"><%= notice %></p>
