Patrick: [8] Making index pages work without content

--- a/app/views/phones/index.slim
+++ b/app/views/phones/index.slim
@@ -1,2 +1,3 @@
-- @phones.each do |phone|
-  = render :partial => "phone", :locals => {:phone => phone}
+- if @phones
+  - @phones.each do |phone|
+    = render :partial => "phone", :locals => {:phone => phone}
