--- a/app/views/phone_numbers/index.slim
+++ b/app/views/phone_numbers/index.slim
@@ -1,2 +1,3 @@
-- @phone_numbers.each do |phone_number|
-  = render :partial => "phone_number", :locals => {:phone_number => phone_number}
+- if @phone_numbers
+  - @phone_numbers.each do |phone_number|
+    = render :partial => "phone_number", :locals => {:phone_number => phone_number}
