--- a/app/views/phones/_form.slim
+++ b/app/views/phones/_form.slim
@@ -1,4 +1,10 @@
 = form_for @phone, :html => {:class => "form-horizontal"} do |f| 
+  - if @phone.errors.any?
+    .alert.alert-error
+      ul
+        - @phone.errors.full_messages.each do |message|
+          li
+            = message
   = f.label :make, "Make"
   = f.text_field :make
   = f.label :has_gps, "GPS"
